phase1/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zabbix  
  name: zabbix-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-frontend
  template:
    metadata:
      labels:
        app: zabbix-frontend
    spec:
      containers:
        - name: zabbix-frontend
          image: zabbix/zabbix-web-nginx-pgsql:alpine-6.4-latest
          ports:
            - containerPort: 8080
