phase1/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: zabbix
  name: zabbix-frontend
spec:
  type: NodePort
  selector:
    app: zabbix-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
